commenting out lines for understanding

--- a/ESM228_Practicum3_Power.Rmd
+++ b/ESM228_Practicum3_Power.Rmd
@@ -26,10 +26,11 @@ library(dplyr)
 set.seed(101)
 population <- declare_population(
   sb_hotels = add_level(N=150, 
-    baseline_water = runif(n=N, min=80, max=500), #min and max values measured
+    baseline_water = runif(n=N, min=80, max=500), #min and max values measured, gallons/room/day
     annual_change_rate = rnorm(n=N, mean=1.02, sd=0.05)) #annual rate of change is 1.1 with sd of 0.2
 )
 pop <- population()
+pop
 
 ```
 
@@ -39,8 +40,8 @@ pop <- population()
 
 potential_outcomes <- 
   declare_potential_outcomes(
-    Y_Z_0 = baseline_water * annual_change_rate, 
-    Y_Z_1 = baseline_water * annual_change_rate * 0.97) 
+    Y_Z_0 = baseline_water * annual_change_rate, #control group, annual change rate from avobe
+    Y_Z_1 = baseline_water * annual_change_rate * 0.97) #program needs to achieve at least a 3% water reduction in order for us to measure it 
 po <- potential_outcomes(pop)
 ```
 
@@ -52,7 +53,7 @@ kable(po[1:5,], digits=2) #this is what the table will look like with this popul
 
 ```{r po-check, echo=TRUE}
 
-mean(po$baseline_water)
+mean(po$baseline_water) 
 
 sd(po$baseline_water)
 
